# tarjeem

./: ProjectHome.md
trunk/desktop/: CMakeLists.txt  Copyright.txt  content.cpp  content.h  main.cpp  settings.h  tarjeem.cpp  tarjeem.h  tarjeem.pro
trunk/qamus-desktop/: qamus.h
trunk/qamus-desktop/Generator/: Copyright.txt  main.cpp
trunk/qamus-desktop/Qamus/: qamus.cpp  qamus.h  qdict.pro  setting.cpp
trunk/trunk/desktop/: CMakeLists.txt  Copyright.txt  content.cpp  content.h  main.cpp  settings.cpp  tarjeem.cpp  tarjeem.h  tarjeem.pro
trunk/trunk/desktop/books/: example.bok
trunk/trunk/desktop/resources/: tarjeem.qrc
trunk/trunk/qamus-desktop/: CMakeLists.txt  qamus.cpp
trunk/trunk/qamus-desktop/Generator/: qamus.pro
trunk/trunk/qamus-desktop/Qamus/: main.cpp  setting.h
trunk/trunk/web/: tarjeem.sql
trunk/trunk/web/application/config/: constants.php  database.php  routes.php
trunk/trunk/web/application/controllers/: ajax.php  homes.php  logins.php  signups.php
trunk/trunk/web/application/core/: MY_Controller.php
trunk/trunk/web/application/models/: signup.php
trunk/trunk/web/application/views/contents/: home.php  input_reset_password.php  reset_password.php  signup.php  signup_success.php  user.php  validation_error.php
trunk/trunk/web/application/views/layouts/: login.php  master.php
trunk/trunk/web/assets/css/: bootstrap.css
trunk/web/: tambahan.txt
trunk/web/application/config/: database.php  routes.php
trunk/web/application/controllers/: homes.php  logins.php  users.php
trunk/web/application/core/: MY_Controller.php
trunk/web/application/helpers/: phpmailer_helper.php
trunk/web/application/libraries/: Login_manager.php
trunk/web/application/models/: user.php
trunk/web/application/views/contents/: input_reset_password.php  login.php  reset_password.php  validation_success.php
trunk/web/application/views/layouts/: header.php  home.php  signup.php
trunk/web/assets/css/: bootstrap.css  custom.css
